[gd_scene load_steps=5 format=3 uid="uid://dl8fwfw3mkb35"]

[ext_resource type="Script" path="res://UI/InGameControls.gd" id="1_be0aj"]
[ext_resource type="Texture2D" uid="uid://dpanx2p4vlybe" path="res://assets/PNG/Default size/towerDefense_tile272.png" id="1_lwyqc"]
[ext_resource type="Texture2D" uid="uid://dbgq7o28qnf44" path="res://assets/PNG/Retina/towerDefense_tile245.png" id="2_ya2d4"]

[sub_resource type="LabelSettings" id="LabelSettings_bhwp3"]
font_size = 120

[node name="InGameControls" type="CanvasLayer"]
script = ExtResource("1_be0aj")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 300.0
grow_horizontal = 2

[node name="SpawnOne" type="Button" parent="."]
offset_left = 54.0
offset_top = 50.0
offset_right = 354.0
offset_bottom = 190.0
scale = Vector2(1.5, 1.5)
theme_override_font_sizes/font_size = 75
text = "x1"
icon = ExtResource("2_ya2d4")

[node name="SpawnTen" type="Button" parent="."]
offset_left = 545.0
offset_top = 49.0
offset_right = 845.0
offset_bottom = 189.0
scale = Vector2(1.5, 1.5)
theme_override_font_sizes/font_size = 75
text = "x10"
icon = ExtResource("2_ya2d4")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -714.0
offset_bottom = 305.0
grow_horizontal = 0
size_flags_horizontal = 8

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_lwyqc")
expand_mode = 2
stretch_mode = 4

[node name="CurrencyAmount" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "0"
label_settings = SubResource("LabelSettings_bhwp3")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="pressed" from="SpawnOne" to="." method="_on_spawn_one_pressed"]
[connection signal="pressed" from="SpawnTen" to="." method="_on_spawn_ten_pressed"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
